# OxidizedNeander

./: Cargo.toml  README.md  flake.nix  index.html  package-lock.json  package.json  todo.txt
src/: app.jsx  base.js  buttons.jsx  error.jsx  files.jsx  index.css  indicators.jsx  lib.rs  memory.jsx  memory_mnemonics.jsx  run.js  signals.js  start.js
